package models;

public class PrincipioActivo {
    private String nombre;

    // Constructor
    public PrincipioActivo() {

    }
    
    public PrincipioActivo(String nombre) {
        this.nombre = nombre;
    }

    public String getNombre() {
        return nombre;
    }

    public void setNombre(String nombre) {
        this.nombre = nombre;
    }

    @Override
    public String toString() {
        return "PrincipioActivo{" +
                "nombre='" + nombre + '\'' +
                '}';
    }
}
